--- a/Whats_the_weather/index.html
+++ b/Whats_the_weather/index.html
@@ -70,6 +70,9 @@
         </div>
       </div>
     </div>
+    <div>
+      <href src="https://github.com/ellyswordy"> Coded by Elly Swordy 2023 </href>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
