formatted github repository link

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
               <li>Wind: <span id="wind"></span> km/h</li>
             </ul>
           </div>
-        </div>
+        </div> 
       </div>
     </div>
     <div>
-      <href src="https://github.com/ellyswordy"> Coded by Elly Swordy 2023 </href>
+      <a href="https://github.com/ellyswordy" class="code-disclaimer"> Coded by Elly Swordy 2023 </a>
     </div>
     <script src="src/index.js"></script>
   </body>
