api configuration for functioning weather icon - changes along with selected city according to the live weather

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col-3">
               <button
-                class="btn btn-dark w-100"
+                class="btn btn-dark shadow-sm w-100"
                 id="current-location-button"
               >
                 Current
@@ -56,13 +56,20 @@
           <li id="description"></li>
         </ul>
         <div class="row">
-          <div class="col-6">
+          <div class="col-1">
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="units">°C</span>
+                ><span class="units">°C</span>   
               </div>
             </div>
+          </div>
+          <div class="col-5">
+            <img src="https://cdn-icons-png.flaticon.com/512/116/116251.png"
+            alt="rainy" 
+            width="50px" 
+            class="large-weather"
+            id="icon">
           </div>
           <div class="col-6">
             <ul>
