--- a/index.html
+++ b/index.html
@@ -50,32 +50,27 @@
             </div>
           </div>
         </form>
-        <h1 id="city"></h1>
-        <ul>
-          <li class="date" id="date"></li>
-          <li id="description"></li>
-        </ul>
-        <div class="row">
-          <div class="col-1">
-            <div class="clearfix">
-              <div class="float-left">
-                <span class="temperature" id="temperature"></span
-                ><span class="units">°C</span>   
-              </div>
-            </div>
-          </div>
-          <div class="col-5">
-            <img src="https://cdn-icons-png.flaticon.com/512/116/116251.png"
-            alt="rainy" 
-            width="50px" 
-            class="large-weather"
-            id="icon">
-          </div>
-          <div class="col-6">
+       <div class="row">
+          <div class="col-3">
+            <h1 id="city"></h1>
             <ul>
+              <li class="date" id="date"></li>
+              <li id="description"></li>
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span> km/h</li>
             </ul>
+          <div class="col-3">
+              <span class="temperature" id="temperature"></span
+                  ><span class="units">
+                    <a href="#" id="celsius">°C</a> | 
+                  <a href="#" id="fahrenheit">°F</a></span>   
+          </div>
+          <div class="col-3">
+            <img src=""
+              alt="rainy" 
+              width="50px" 
+              class="large-weather"
+              id="icon">
           </div>
         </div> 
       </div>
