--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
           </div>
         </form>
-       <div class="row">
+        <div class="row">
           <div class="col-3">
             <h1 id="city"></h1>
             <ul>
@@ -59,13 +59,14 @@
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span> km/h</li>
             </ul>
-          <div class="col-3">
-              <span class="temperature" id="temperature"></span
+          </div>
+          <div class="col-2 temp">
+            <span class="temperature" id="temperature"></span
                   ><span class="units">
                     <a href="#" id="celsius">°C</a> | 
-                  <a href="#" id="fahrenheit">°F</a></span>   
+                  <a href="#" id="fahrenheit">°F</a></span>
           </div>
-          <div class="col-3">
+          <div class="col-7 lw">
             <img src=""
               alt="rainy" 
               width="50px" 
